fix submodule url issue;

--- a/meson.build
+++ b/meson.build
@@ -2,5 +2,5 @@ project('gsl', 'cpp', default_options: ['cpp_std=c++14', 'werror=true'], version
 
 # head-only
 gsl_dep = declare_dependency(
-    include_directories: 'repo/include'
+    include_directories: 'src/include'
 )
